# walnut-orchestrator

./: .dockerignore  .env.example  .gitignore  DEMO.md  POLICY.md  POLICY_FRAMEWORK_REPORT.md  README.md  REPORT.md  alembic.ini  com.aruba.aoss.int  openapi_spec.json  proxmox.int  pyproject.toml  smoke_test.py  smoke_test_diag.py  start.sh  test-routing.js  test_db_connection.py  test_e2e.sh  test_nut_integration.py  test_vm_123.py
alembic/: env.py  script.py.mako
alembic/versions/: 20250805_1030_0001_initial_schema.py  20250808_0954_aae5cef19ddd_add_users_table_for_authentication.py  20250822_1432_0022_add_oidc_oauth_support.py  20250822_1500_add_policy_system_v1_tables.py
docker/: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docker-full/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
docs/: TESTING.md  policy-diff.md
frontend/: App.tsx  index.html  main.tsx  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-to-take/components/: EventsTable.tsx  LinePower24h.tsx  MetricCard.tsx  SecondaryToolbar.tsx  Skeleton.tsx  StatusPill.tsx  Tag.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Timeline.tsx  Toast.tsx
frontend-to-take/components/screens/: IntegrationsScreen.tsx  OrchestrationScreen.tsx  OverviewScreen.tsx  SettingsScreen.tsx
frontend-to-take/components/ui/: sonner.tsx
frontend-to-take/styles/: globals.css
frontend/components/: EventsTable.tsx  LinePower24h.tsx  MetricCard.tsx  Progress.tsx  SecondaryToolbar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Timeline.tsx  Toast.tsx  TopBar.tsx
frontend/components/HealthBar/: HealthBar.tsx  deriveSegments.ts  index.ts  types.ts  useHealthData.ts
frontend/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
frontend/components/hosts/: DetailsDrawer.tsx
frontend/components/policy/: ActionList.tsx  JsonPreviewDrawer.tsx  PolicyFlyout.tsx  PolicyForm.tsx  TargetSelector.tsx  TriggerEditor.tsx  types.ts
frontend/components/screens/: EventsScreen.tsx  HostsScreen.tsx  HostsScreen.tsx.backup  IntegrationsScreen.tsx  IntegrationsScreen.tsx.backup  IntegrationsSettingsScreen.tsx  OrchestrationScreen.tsx  OverviewScreen.tsx  (+1 more)
frontend/contexts/: AuthContext.tsx  AuthPrompt.tsx
frontend/dev/: previews.tsx
frontend/hooks/: useWalnutApi.ts
frontend/services/: api.ts  auth.ts
frontend/styles/: globals.css
frontend/utils/: time.ts
frontend/walnut-ui/: package.json
integrations/com.aruba.aoss/: README.md  __init__.py  driver.py  plugin.yaml  requirements.txt
integrations/proxmox-ve/: driver.py
integrations/walnut.proxmox.ve/: README.md  driver.py  plugin.yaml
integrations/walnut.sample.demo/: driver.py  plugin.yaml
new-elements-to-implement/Integration Flyout Panel/: App.tsx
new-elements-to-implement/Top Bar Redesign/: App.tsx
new-elements-to-implement/policy/: README.md  package.json
reference/: api-proxmox-vm-lifecycle.md
tests/: __init__.py  conftest.py  test_aruba_stack_inventory_temp.py  test_async_sqlcipher_dialect.py  test_cli_comprehensive.py  test_cli_database.py  test_cli_hosts.py  test_cli_keys.py  test_cli_system.py  test_cli_testing.py  test_database.py  test_hosts_stack_api_e2e.py  test_nut_client.py  test_nut_poller.py  test_policy_api_integration.py  test_policy_compile_pipeline.py  test_policy_driver_preflight.py  test_policy_inverse_registry.py  test_policy_performance_concurrency.py  test_policy_selector_parser.py  test_policy_severity_mapping.py  test_proxmox_integration.py  test_shutdown_executor.py  test_sqlcipher_encryption.py  test_ssh_client.py  test_websocket_auth.py  test_websocket_standalone.py
tests/admin/: test_event_injector.py
tests/auth/: test_cli.py  test_oidc.py  test_rbac.py  test_security.py  test_signup_login_refresh_logout.py
tests/policies/: test_api_policies.py  test_plan_and_dryrun.py  test_schemas_linter.py
tools/: check_time_backend.py
unused/: sample.int
unused/reference/: api-proxmox-vm-lifecycle.md
walnut/: __init__.py  app.py  config.py
walnut-test-env/: pyvenv.cfg
walnut/actions/: base.py  notify.py  proxmox.py  sleep.py  ssh.py  webhook.py
walnut/api/: admin_events.py  events.py  hosts.py  integrations.py  policies.py  policy_runs.py  settings.py  system.py  ups.py  websocket.py  workers.py
walnut/auth/: auth.py  csrf.py  deps.py  models.py  router.py  schemas.py  sync_user_db.py
walnut/cli/: __init__.py  auth.py  backup.py  database.py  hosts.py  keys.py  main.py  system.py  test.py  utils.py
walnut/core/: app_settings.py  bus.py  health.py  integration_registry.py  manifests.py  nut_service.py  plugin_schema.py  registry.py  secrets.py  services.py  venv_isolation.py  websocket_manager.py
walnut/database/: __init__.py  async_engine_wrapper.py  async_sqlcipher.py  connection.py  engine.py  models.py  sqlcipher_dialect.py
walnut/hosts/: __init__.py  manager.py
walnut/inventory/: __init__.py  index.py
walnut/nut/: __init__.py  client.py  events.py  models.py  poller.py
walnut/policies/: linter.py  plan.py  priority.py  schemas.py
walnut/policy/: __init__.py  compile.py  engine.py  models.py
walnut/shutdown/: __init__.py  executor.py  triggers.py
walnut/ssh/: __init__.py  client.py  credentials.py
walnut/targets/: resolve.py
walnut/tests/: test_async_sqlcipher.py  test_connection_manager.py  test_metadata.py
walnut/transports/: base.py  gnmi_adapter.py  http_adapter.py  ipmi_adapter.py  manager.py  modbus_adapter.py  mqtt_adapter.py  netconf_adapter.py  redfish_adapter.py  registry.py  snmp_adapter.py  ssh_adapter.py  telnet_adapter.py  websocket_adapter.py
walnut/utils/: logging.py  retry.py  timeparse.py
(+25 files in other folders)
